feat: Enhance UI and data handling
Refactors the `App` component to manage application state and routing more effectively. Introduces new components like `ProfileDropdown`, `SettingsModal`, and `WeeklyScheduleTab`. Updates `Header` and `LoginPage` for improved user experience and authentication flow. Enhances `DetailModal` to correctly display singular data types and refines `LanguageSwitcher` by removing redundant icons. Implements improved language handling and data type definitions.

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -1,1 +1,187 @@
-full contents of i18n/translations/ar.json
+{
+  "login.subtitle": "نظام معلومات الإدارة",
+  "login.emailPlaceholder": "البريد الإلكتروني",
+  "login.passwordPlaceholder": "كلمة المرور",
+  "login.signInButton": "تسجيل الدخول",
+  "login.welcome": "أهلاً وسهلاً",
+  "signup.prompt": "ليس لديك حساب؟ اشتراك",
+  "signup.loginPrompt": "هل لديك حساب بالفعل؟ تسجيل الدخول",
+  "signup.namePlaceholder": "الاسم الكامل",
+  "signup.emailPlaceholder": "البريد الإلكتروني",
+  "signup.phonePlaceholder": "رقم الهاتف",
+  "signup.passwordPlaceholder": "أنشئ كلمة مرور",
+  "signup.signUpButton": "طلب وصول",
+  "tabs.calendar": "التقويم",
+  "tabs.financials": "المالية",
+  "tabs.challenges": "التحديات والمزايا",
+  "tabs.contacts": "جهات الاتصال",
+  "tabs.tasks": "المهام",
+  "tabs.adminPanel": "لوحة التحكم",
+  "statCards.totalMeetings": "إجمالي الاجتماعات",
+  "statCards.meetingsThisWeek": "اجتماعات هذا الأسبوع",
+  "statCards.pendingPayments": "المدفوعات المعلقة",
+  "statCards.startThisWeek": "يبدأ هذا الأسبوع",
+  "statCards.activeEscrows": "جهات الاتصال النشطة",
+  "statCards.inCompensation": "أضيف مؤخراً",
+  "statCards.testCondition": "إنجاز المهام",
+  "chatbot.initialMessage": "مرحبًا! كيف يمكنني مساعدتك في بيانات لوحة القيادة اليوم؟",
+  "chatbot.prompt1": "لخص مهامي لهذا اليوم.",
+  "chatbot.prompt2": "ما هي المدفوعات المعلقة؟",
+  "chatbot.prompt3": "أرني المهام ذات الأولوية العالية.",
+  "chatbot.prompt4": "من في المجلس الطبي؟",
+  "chatbot.toggle": "تبديل روبوت المحادثة",
+  "chatbot.header": "مساعد Dripfy الذكي",
+  "chatbot.subtitle": "متصل",
+  "chatbot.clear": "مسح المحادثة",
+  "chatbot.error": "عذراً، حدث خطأ.",
+  "chatbot.examplePrompts": "أمثلة على الأسئلة",
+  "chatbot.placeholder": "اسأل عن بيانات اللوحة...",
+  "chatbot.send": "إرسال",
+  "profile.menu.profile": "الملف الشخصي",
+  "profile.menu.settings": "الإعدادات",
+  "profile.menu.privacy": "الخصوصية",
+  "profile.menu.logout": "تسجيل الخروج",
+  "settings.title": "الإعدادات",
+  "settings.closeButton": "إغلاق",
+  "settings.saveButton": "حفظ التغييرات",
+  "settings.tabs.profile": "الملف الشخصي",
+  "settings.tabs.settings": "الإعدادات",
+  "settings.tabs.privacy": "الخصوصية",
+  "settings.profile.title": "المعلومات الشخصية",
+  "settings.profile.subtitle": "قم بتحديث صورتك وتفاصيلك الشخصية.",
+  "settings.profile.name": "الاسم الكامل",
+  "settings.profile.email": "البريد الإلكتروني",
+  "settings.profile.password": "كلمة المرور",
+  "settings.profile.newPassword": "كلمة المرور الجديدة",
+  "settings.profile.confirmPassword": "تأكيد كلمة المرور الجديدة",
+  "settings.profile.changePassword": "تغيير كلمة المرور",
+  "settings.profile.role": "الدور",
+  "settings.settings.title": "إعدادات التطبيق",
+  "settings.settings.subtitle": "خصص تجربتك.",
+  "settings.settings.language": "اللغة",
+  "settings.settings.darkMode": "الوضع الداكن",
+  "settings.settings.emailNotifications": "إشعارات البريد الإلكتروني",
+  "settings.settings.pushNotifications": "الإشعارات الفورية",
+  "settings.privacy.title": "إعدادات الخصوصية",
+  "settings.privacy.subtitle": "إدارة بياناتك وخصوصيتك.",
+  "settings.privacy.auditLog": "سجل النشاط",
+  "settings.privacy.exportData": "تصدير بياناتي",
+  "settings.privacy.deleteAccount": "حذف الحساب",
+  "settings.privacy.exporting": "جاري التصدير...",
+  "settings.privacy.deleting": "جاري الحذف...",
+  "days.monday": "الاثنين",
+  "days.tuesday": "الثلاثاء",
+  "days.wednesday": "الأربعاء",
+  "days.thursday": "الخميس",
+  "days.friday": "الجمعة",
+  "days.saturday": "السبت",
+  "days.sunday": "الأحد",
+  "daysShort.mon": "إثن",
+  "daysShort.tue": "ثلا",
+  "daysShort.wed": "أرب",
+  "daysShort.thu": "خمي",
+  "daysShort.fri": "جمع",
+  "daysShort.sat": "سبت",
+  "daysShort.sun": "أحد",
+  "calendar.today": "اليوم",
+  "calendar.month": "شهر",
+  "calendar.week": "أسبوع",
+  "calendar.newEvent": "حدث جديد",
+  "calendar.addEventTo": "إضافة حدث إلى",
+  "calendar.openPicker": "فتح منتقي التاريخ",
+  "financials.newRecord": "سجل جديد",
+  "financials.description": "الوصف",
+  "financials.amount": "المبلغ",
+  "financials.status": "الحالة",
+  "financials.dueDate": "تاريخ الاستحقاق",
+  "status.paid": "مدفوع",
+  "status.pending": "قيد الانتظار",
+  "status.overdue": "متأخر",
+  "challenges.title": "التحديات",
+  "challenges.add": "إضافة تحدي",
+  "advantages.title": "المزايا",
+  "advantages.add": "إضافة ميزة",
+  "contacts.newContact": "جهة اتصال جديدة",
+  "tasks.task": "المهمة",
+  "tasks.assignee": "المكلف",
+  "tasks.priority": "الأولوية",
+  "tasks.status": "الحالة",
+  "tasks.dueDate": "تاريخ الاستحقاق",
+  "tasks.newTask": "مهمة جديدة",
+  "priority.high": "عالية",
+  "priority.medium": "متوسطة",
+  "priority.low": "منخفضة",
+  "taskStatus.ToDo": "للقيام به",
+  "taskStatus.InProgress": "قيد التنفيذ",
+  "taskStatus.Done": "تم",
+  "admin.userPermissions": "أذونات المستخدم",
+  "admin.auditLog": "سجل التدقيق",
+  "admin.signupRequests": "طلبات التسجيل",
+  "admin.by": "بواسطة",
+  "admin.approve": "موافقة",
+  "admin.deny": "رفض",
+  "admin.noRequests": "لا توجد طلبات تسجيل معلقة.",
+  "userRoles.admin": "مدير",
+  "userRoles.user": "مستخدم",
+  "auditLogActions.Created": "تم الإنشاء",
+  "auditLogActions.Updated": "تم التحديث",
+  "auditLogActions.Deleted": "تم الحذف",
+  "auditLogActions.Approved": "تمت الموافقة",
+  "auditLogActions.Denied": "تم الرفض",
+  "dataTypes.schedule": "حدث",
+  "dataTypes.financial": "سجل مالي",
+  "dataTypes.challenge": "تحدي",
+  "dataTypes.advantage": "ميزة",
+  "dataTypes.contact": "جهة اتصال",
+  "dataTypes.task": "مهمة",
+  "dataTypes.user": "مستخدم",
+  "dataTypes.SignupRequest": "طلب تسجيل",
+  "modal.createNew": "إنشاء جديد",
+  "modal.edit": "تعديل",
+  "modal.delete": "حذف",
+  "modal.create": "إنشاء",
+  "modal.save": "حفظ التغييرات",
+  "modal.noFields": "لا توجد حقول قابلة للتعديل لهذا النوع من العناصر.",
+  "modal.type": "النوع",
+  "modal.status": "الحالة",
+  "modal.dueDate": "تاريخ الاستحقاق",
+  "modal.schedule.title": "العنوان",
+  "modal.schedule.day": "اليوم",
+  "modal.schedule.time": "الوقت",
+  "modal.schedule.participants": "المشاركون (مفصولون بفاصلة)",
+  "modal.financials.description": "الوصف",
+  "modal.financials.amount": "المبلغ (€)",
+  "modal.challenges.title": "العنوان",
+  "modal.challenges.description": "الوصف",
+  "modal.challenges.severity": "الخطورة",
+  "modal.advantages.title": "العنوان",
+  "modal.advantages.description": "الوصف",
+  "modal.contacts.name": "الاسم",
+  "modal.contacts.role": "الدور",
+  "modal.contacts.email": "البريد الإلكتروني",
+  "modal.contacts.phone": "الهاتف",
+  "modal.tasks.title": "العنوان",
+  "modal.tasks.assignee": "المكلف",
+  "modal.tasks.priority": "الأولوية",
+  "modal.users.name": "الاسم",
+  "modal.users.email": "البريد الإلكتروني",
+  "modal.users.role": "الدور",
+  "footer.links": "روابط",
+  "footer.imprint": "البصمة",
+  "footer.privacy": "سياسة الخصوصية",
+  "footer.terms": "الشروط والأحكام",
+  "footer.followUs": "تابعنا",
+  "footer.copyright": "© 2024 Dripfy GmbH. كل الحقوق محفوظة.",
+  "positions": {
+    "CEO": "الرئيس التنفيذي",
+    "CTO": "المدير التقني",
+    "CFO": "المدير المالي",
+    "COO": "مدير العمليات",
+    "HeadofDepartment": "رئيس القسم",
+    "TeamLead": "قائد الفريق",
+    "ProjectManager": "مدير المشروع",
+    "SeniorSpecialist": "أخصائي أول",
+    "JuniorSpecialist": "أخصائي",
+    "Intern": "متدرب"
+  }
+}
