--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -1,1 +1,187 @@
-full contents of i18n/translations/de.json
+{
+  "login.subtitle": "Management-Informationssystem",
+  "login.emailPlaceholder": "E-Mail-Adresse",
+  "login.passwordPlaceholder": "Passwort",
+  "login.signInButton": "Anmelden",
+  "login.welcome": "Willkommen",
+  "signup.prompt": "Kein Konto? Registrieren",
+  "signup.loginPrompt": "Bereits ein Konto? Anmelden",
+  "signup.namePlaceholder": "Vollständiger Name",
+  "signup.emailPlaceholder": "E-Mail-Adresse",
+  "signup.phonePlaceholder": "Telefonnummer",
+  "signup.passwordPlaceholder": "Passwort erstellen",
+  "signup.signUpButton": "Zugriff anfordern",
+  "tabs.calendar": "Kalender",
+  "tabs.financials": "Finanzen",
+  "tabs.challenges": "Herausforderungen & Vorteile",
+  "tabs.contacts": "Kontakte",
+  "tabs.tasks": "Aufgaben",
+  "tabs.adminPanel": "Admin-Panel",
+  "statCards.totalMeetings": "Gesamte Meetings",
+  "statCards.meetingsThisWeek": "Meetings diese Woche",
+  "statCards.pendingPayments": "Ausstehende Zahlungen",
+  "statCards.startThisWeek": "Beginn diese Woche",
+  "statCards.activeEscrows": "Aktive Kontakte",
+  "statCards.inCompensation": "Kürzlich hinzugefügt",
+  "statCards.testCondition": "Aufgabenerfüllung",
+  "chatbot.initialMessage": "Hallo! Wie kann ich Ihnen heute mit den Dashboard-Daten helfen?",
+  "chatbot.prompt1": "Fassen Sie meine heutigen Aufgaben zusammen.",
+  "chatbot.prompt2": "Welche Zahlungen sind ausstehend?",
+  "chatbot.prompt3": "Zeigen Sie mir Aufgaben mit hoher Priorität.",
+  "chatbot.prompt4": "Wer ist im medizinischen Beirat?",
+  "chatbot.toggle": "Chatbot umschalten",
+  "chatbot.header": "Dripfy KI-Assistent",
+  "chatbot.subtitle": "Online",
+  "chatbot.clear": "Chat leeren",
+  "chatbot.error": "Entschuldigung, ein Fehler ist aufgetreten.",
+  "chatbot.examplePrompts": "Beispielanfragen",
+  "chatbot.placeholder": "Fragen Sie nach Dashboard-Daten...",
+  "chatbot.send": "Senden",
+  "profile.menu.profile": "Profil",
+  "profile.menu.settings": "Einstellungen",
+  "profile.menu.privacy": "Datenschutz",
+  "profile.menu.logout": "Abmelden",
+  "settings.title": "Einstellungen",
+  "settings.closeButton": "Schließen",
+  "settings.saveButton": "Änderungen speichern",
+  "settings.tabs.profile": "Profil",
+  "settings.tabs.settings": "Einstellungen",
+  "settings.tabs.privacy": "Datenschutz",
+  "settings.profile.title": "Persönliche Informationen",
+  "settings.profile.subtitle": "Aktualisieren Sie Ihr Foto und Ihre persönlichen Daten.",
+  "settings.profile.name": "Vollständiger Name",
+  "settings.profile.email": "E-Mail-Adresse",
+  "settings.profile.password": "Passwort",
+  "settings.profile.newPassword": "Neues Passwort",
+  "settings.profile.confirmPassword": "Neues Passwort bestätigen",
+  "settings.profile.changePassword": "Passwort ändern",
+  "settings.profile.role": "Rolle",
+  "settings.settings.title": "Anwendungseinstellungen",
+  "settings.settings.subtitle": "Passen Sie Ihre Erfahrung an.",
+  "settings.settings.language": "Sprache",
+  "settings.settings.darkMode": "Dunkelmodus",
+  "settings.settings.emailNotifications": "E-Mail-Benachrichtigungen",
+  "settings.settings.pushNotifications": "Push-Benachrichtigungen",
+  "settings.privacy.title": "Datenschutzeinstellungen",
+  "settings.privacy.subtitle": "Verwalten Sie Ihre Daten und Ihren Datenschutz.",
+  "settings.privacy.auditLog": "Aktivitätsprotokoll",
+  "settings.privacy.exportData": "Meine Daten exportieren",
+  "settings.privacy.deleteAccount": "Konto löschen",
+  "settings.privacy.exporting": "Exportiere...",
+  "settings.privacy.deleting": "Lösche...",
+  "days.monday": "Montag",
+  "days.tuesday": "Dienstag",
+  "days.wednesday": "Mittwoch",
+  "days.thursday": "Donnerstag",
+  "days.friday": "Freitag",
+  "days.saturday": "Samstag",
+  "days.sunday": "Sonntag",
+  "daysShort.mon": "Mo",
+  "daysShort.tue": "Di",
+  "daysShort.wed": "Mi",
+  "daysShort.thu": "Do",
+  "daysShort.fri": "Fr",
+  "daysShort.sat": "Sa",
+  "daysShort.sun": "So",
+  "calendar.today": "Heute",
+  "calendar.month": "Monat",
+  "calendar.week": "Woche",
+  "calendar.newEvent": "Neues Ereignis",
+  "calendar.addEventTo": "Ereignis hinzufügen zu",
+  "calendar.openPicker": "Datumsauswahl öffnen",
+  "financials.newRecord": "Neuer Eintrag",
+  "financials.description": "Beschreibung",
+  "financials.amount": "Betrag",
+  "financials.status": "Status",
+  "financials.dueDate": "Fälligkeitsdatum",
+  "status.paid": "Bezahlt",
+  "status.pending": "Ausstehend",
+  "status.overdue": "Überfällig",
+  "challenges.title": "Herausforderungen",
+  "challenges.add": "Herausforderung hinzufügen",
+  "advantages.title": "Vorteile",
+  "advantages.add": "Vorteil hinzufügen",
+  "contacts.newContact": "Neuer Kontakt",
+  "tasks.task": "Aufgabe",
+  "tasks.assignee": "Zuständig",
+  "tasks.priority": "Priorität",
+  "tasks.status": "Status",
+  "tasks.dueDate": "Fälligkeitsdatum",
+  "tasks.newTask": "Neue Aufgabe",
+  "priority.high": "Hoch",
+  "priority.medium": "Mittel",
+  "priority.low": "Niedrig",
+  "taskStatus.ToDo": "Zu erledigen",
+  "taskStatus.InProgress": "In Bearbeitung",
+  "taskStatus.Done": "Erledigt",
+  "admin.userPermissions": "Benutzerberechtigungen",
+  "admin.auditLog": "Prüfungsprotokoll",
+  "admin.signupRequests": "Registrierungsanfragen",
+  "admin.by": "von",
+  "admin.approve": "Genehmigen",
+  "admin.deny": "Ablehnen",
+  "admin.noRequests": "Keine ausstehenden Registrierungsanfragen.",
+  "userRoles.admin": "Admin",
+  "userRoles.user": "Benutzer",
+  "auditLogActions.Created": "Erstellt",
+  "auditLogActions.Updated": "Aktualisiert",
+  "auditLogActions.Deleted": "Gelöscht",
+  "auditLogActions.Approved": "Genehmigt",
+  "auditLogActions.Denied": "Abgelehnt",
+  "dataTypes.schedule": "Ereignis",
+  "dataTypes.financial": "Finanzeintrag",
+  "dataTypes.challenge": "Herausforderung",
+  "dataTypes.advantage": "Vorteil",
+  "dataTypes.contact": "Kontakt",
+  "dataTypes.task": "Aufgabe",
+  "dataTypes.user": "Benutzer",
+  "dataTypes.SignupRequest": "Registrierungsanfrage",
+  "modal.createNew": "Neu erstellen",
+  "modal.edit": "Bearbeiten",
+  "modal.delete": "Löschen",
+  "modal.create": "Erstellen",
+  "modal.save": "Änderungen speichern",
+  "modal.noFields": "Keine bearbeitbaren Felder für diesen Elementtyp.",
+  "modal.type": "Typ",
+  "modal.status": "Status",
+  "modal.dueDate": "Fälligkeitsdatum",
+  "modal.schedule.title": "Titel",
+  "modal.schedule.day": "Tag",
+  "modal.schedule.time": "Uhrzeit",
+  "modal.schedule.participants": "Teilnehmer (mit Komma trennen)",
+  "modal.financials.description": "Beschreibung",
+  "modal.financials.amount": "Betrag (€)",
+  "modal.challenges.title": "Titel",
+  "modal.challenges.description": "Beschreibung",
+  "modal.challenges.severity": "Schweregrad",
+  "modal.advantages.title": "Titel",
+  "modal.advantages.description": "Beschreibung",
+  "modal.contacts.name": "Name",
+  "modal.contacts.role": "Rolle",
+  "modal.contacts.email": "E-Mail",
+  "modal.contacts.phone": "Telefon",
+  "modal.tasks.title": "Titel",
+  "modal.tasks.assignee": "Zuständig",
+  "modal.tasks.priority": "Priorität",
+  "modal.users.name": "Name",
+  "modal.users.email": "E-Mail",
+  "modal.users.role": "Rolle",
+  "footer.links": "Links",
+  "footer.imprint": "Impressum",
+  "footer.privacy": "Datenschutz",
+  "footer.terms": "AGB",
+  "footer.followUs": "Folgen Sie uns",
+  "footer.copyright": "© 2024 Dripfy GmbH. Alle Rechte vorbehalten.",
+  "positions": {
+    "CEO": "CEO",
+    "CTO": "CTO",
+    "CFO": "CFO",
+    "COO": "COO",
+    "HeadofDepartment": "Abteilungsleiter",
+    "TeamLead": "Teamleiter",
+    "ProjectManager": "Projektmanager",
+    "SeniorSpecialist": "Senior-Spezialist",
+    "JuniorSpecialist": "Spezialist",
+    "Intern": "Praktikant"
+  }
+}
