--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -1,1 +1,187 @@
-full contents of i18n/translations/ru.json
+{
+  "login.subtitle": "Информационная система управления",
+  "login.emailPlaceholder": "Адрес электронной почты",
+  "login.passwordPlaceholder": "Пароль",
+  "login.signInButton": "Войти",
+  "login.welcome": "Добро пожаловать",
+  "signup.prompt": "Нет аккаунта? Зарегистрироваться",
+  "signup.loginPrompt": "Уже есть аккаунт? Войти",
+  "signup.namePlaceholder": "Полное имя",
+  "signup.emailPlaceholder": "Адрес электронной почты",
+  "signup.phonePlaceholder": "Номер телефона",
+  "signup.passwordPlaceholder": "Создайте пароль",
+  "signup.signUpButton": "Запросить доступ",
+  "tabs.calendar": "Календарь",
+  "tabs.financials": "Финансы",
+  "tabs.challenges": "Проблемы и преимущества",
+  "tabs.contacts": "Контакты",
+  "tabs.tasks": "Задачи",
+  "tabs.adminPanel": "Панель администратора",
+  "statCards.totalMeetings": "Всего встреч",
+  "statCards.meetingsThisWeek": "Встречи на этой неделе",
+  "statCards.pendingPayments": "Ожидающие платежи",
+  "statCards.startThisWeek": "Начиная с этой недели",
+  "statCards.activeEscrows": "Активные контакты",
+  "statCards.inCompensation": "Недавно добавленные",
+  "statCards.testCondition": "Выполнение задач",
+  "chatbot.initialMessage": "Здравствуйте! Чем я могу помочь вам сегодня с данными панели управления?",
+  "chatbot.prompt1": "Суммируйте мои задачи на сегодня.",
+  "chatbot.prompt2": "Какие платежи ожидаются?",
+  "chatbot.prompt3": "Покажите мне задачи с высоким приоритетом.",
+  "chatbot.prompt4": "Кто входит в медицинский совет?",
+  "chatbot.toggle": "Переключить чат-бота",
+  "chatbot.header": "ИИ-помощник Dripfy",
+  "chatbot.subtitle": "В сети",
+  "chatbot.clear": "Очистить чат",
+  "chatbot.error": "Извините, произошла ошибка.",
+  "chatbot.examplePrompts": "Примеры запросов",
+  "chatbot.placeholder": "Спросите о данных панели...",
+  "chatbot.send": "Отправить",
+  "profile.menu.profile": "Профиль",
+  "profile.menu.settings": "Настройки",
+  "profile.menu.privacy": "Конфиденциальность",
+  "profile.menu.logout": "Выйти",
+  "settings.title": "Настройки",
+  "settings.closeButton": "Закрыть",
+  "settings.saveButton": "Сохранить изменения",
+  "settings.tabs.profile": "Профиль",
+  "settings.tabs.settings": "Настройки",
+  "settings.tabs.privacy": "Конфиденциальность",
+  "settings.profile.title": "Личная информация",
+  "settings.profile.subtitle": "Обновите ваше фото и личные данные.",
+  "settings.profile.name": "Полное имя",
+  "settings.profile.email": "Адрес электронной почты",
+  "settings.profile.password": "Пароль",
+  "settings.profile.newPassword": "Новый пароль",
+  "settings.profile.confirmPassword": "Подтвердите новый пароль",
+  "settings.profile.changePassword": "Изменить пароль",
+  "settings.profile.role": "Роль",
+  "settings.settings.title": "Настройки приложения",
+  "settings.settings.subtitle": "Настройте свой опыт.",
+  "settings.settings.language": "Язык",
+  "settings.settings.darkMode": "Темный режим",
+  "settings.settings.emailNotifications": "Уведомления по электронной почте",
+  "settings.settings.pushNotifications": "Push-уведомления",
+  "settings.privacy.title": "Настройки конфиденциальности",
+  "settings.privacy.subtitle": "Управляйте своими данными и конфиденциальностью.",
+  "settings.privacy.auditLog": "Журнал активности",
+  "settings.privacy.exportData": "Экспортировать мои данные",
+  "settings.privacy.deleteAccount": "Удалить аккаунт",
+  "settings.privacy.exporting": "Экспорт...",
+  "settings.privacy.deleting": "Удаление...",
+  "days.monday": "Понедельник",
+  "days.tuesday": "Вторник",
+  "days.wednesday": "Среда",
+  "days.thursday": "Четверг",
+  "days.friday": "Пятница",
+  "days.saturday": "Суббота",
+  "days.sunday": "Воскресенье",
+  "daysShort.mon": "Пн",
+  "daysShort.tue": "Вт",
+  "daysShort.wed": "Ср",
+  "daysShort.thu": "Чт",
+  "daysShort.fri": "Пт",
+  "daysShort.sat": "Сб",
+  "daysShort.sun": "Вс",
+  "calendar.today": "Сегодня",
+  "calendar.month": "Месяц",
+  "calendar.week": "Неделя",
+  "calendar.newEvent": "Новое событие",
+  "calendar.addEventTo": "Добавить событие в",
+  "calendar.openPicker": "Открыть выбор даты",
+  "financials.newRecord": "Новая запись",
+  "financials.description": "Описание",
+  "financials.amount": "Сумма",
+  "financials.status": "Статус",
+  "financials.dueDate": "Срок",
+  "status.paid": "Оплачено",
+  "status.pending": "Ожидание",
+  "status.overdue": "Просрочено",
+  "challenges.title": "Проблемы",
+  "challenges.add": "Добавить проблему",
+  "advantages.title": "Преимущества",
+  "advantages.add": "Добавить преимущество",
+  "contacts.newContact": "Новый контакт",
+  "tasks.task": "Задача",
+  "tasks.assignee": "Исполнитель",
+  "tasks.priority": "Приоритет",
+  "tasks.status": "Статус",
+  "tasks.dueDate": "Срок выполнения",
+  "tasks.newTask": "Новая задача",
+  "priority.high": "Высокий",
+  "priority.medium": "Средний",
+  "priority.low": "Низкий",
+  "taskStatus.ToDo": "К выполнению",
+  "taskStatus.InProgress": "В процессе",
+  "taskStatus.Done": "Выполнено",
+  "admin.userPermissions": "Права пользователей",
+  "admin.auditLog": "Журнал аудита",
+  "admin.signupRequests": "Запросы на регистрацию",
+  "admin.by": "кем",
+  "admin.approve": "Одобрить",
+  "admin.deny": "Отклонить",
+  "admin.noRequests": "Нет ожидающих запросов на регистрацию.",
+  "userRoles.admin": "Администратор",
+  "userRoles.user": "Пользователь",
+  "auditLogActions.Created": "Создано",
+  "auditLogActions.Updated": "Обновлено",
+  "auditLogActions.Deleted": "Удалено",
+  "auditLogActions.Approved": "Одобрено",
+  "auditLogActions.Denied": "Отклонено",
+  "dataTypes.schedule": "Событие",
+  "dataTypes.financial": "Финансовая запись",
+  "dataTypes.challenge": "Проблема",
+  "dataTypes.advantage": "Преимущество",
+  "dataTypes.contact": "Контакт",
+  "dataTypes.task": "Задача",
+  "dataTypes.user": "Пользователь",
+  "dataTypes.SignupRequest": "Запрос на регистрацию",
+  "modal.createNew": "Создать",
+  "modal.edit": "Редактировать",
+  "modal.delete": "Удалить",
+  "modal.create": "Создать",
+  "modal.save": "Сохранить изменения",
+  "modal.noFields": "Нет редактируемых полей для этого типа элемента.",
+  "modal.type": "Тип",
+  "modal.status": "Статус",
+  "modal.dueDate": "Срок",
+  "modal.schedule.title": "Название",
+  "modal.schedule.day": "День",
+  "modal.schedule.time": "Время",
+  "modal.schedule.participants": "Участники (через запятую)",
+  "modal.financials.description": "Описание",
+  "modal.financials.amount": "Сумма (€)",
+  "modal.challenges.title": "Название",
+  "modal.challenges.description": "Описание",
+  "modal.challenges.severity": "Серьезность",
+  "modal.advantages.title": "Название",
+  "modal.advantages.description": "Описание",
+  "modal.contacts.name": "Имя",
+  "modal.contacts.role": "Роль",
+  "modal.contacts.email": "Эл. почта",
+  "modal.contacts.phone": "Телефон",
+  "modal.tasks.title": "Название",
+  "modal.tasks.assignee": "Исполнитель",
+  "modal.tasks.priority": "Приоритет",
+  "modal.users.name": "Имя",
+  "modal.users.email": "Эл. почта",
+  "modal.users.role": "Роль",
+  "footer.links": "Ссылки",
+  "footer.imprint": "Выходные данные",
+  "footer.privacy": "Политика конфиденциальности",
+  "footer.terms": "Условия использования",
+  "footer.followUs": "Следите за нами",
+  "footer.copyright": "© 2024 Dripfy GmbH. Все права защищены.",
+  "positions": {
+    "CEO": "Генеральный директор",
+    "CTO": "Технический директор",
+    "CFO": "Финансовый директор",
+    "COO": "Операционный директор",
+    "HeadofDepartment": "Начальник отдела",
+    "TeamLead": "Руководитель группы",
+    "ProjectManager": "Менеджер проекта",
+    "SeniorSpecialist": "Старший специалист",
+    "JuniorSpecialist": "Специалист",
+    "Intern": "Стажер"
+  }
+}
