--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -1,1 +1,187 @@
-full contents of i18n/translations/tr.json
+{
+  "login.subtitle": "Yönetim Bilgi Sistemi",
+  "login.emailPlaceholder": "E-posta adresi",
+  "login.passwordPlaceholder": "Şifre",
+  "login.signInButton": "Giriş Yap",
+  "login.welcome": "Hoş geldiniz",
+  "signup.prompt": "Hesabınız yok mu? Kayıt Ol",
+  "signup.loginPrompt": "Zaten bir hesabınız var mı? Giriş Yap",
+  "signup.namePlaceholder": "Tam Adınız",
+  "signup.emailPlaceholder": "E-posta adresi",
+  "signup.phonePlaceholder": "Telefon Numarası",
+  "signup.passwordPlaceholder": "Bir şifre oluşturun",
+  "signup.signUpButton": "Erişim İste",
+  "tabs.calendar": "Takvim",
+  "tabs.financials": "Finansal",
+  "tabs.challenges": "Zorluklar & Avantajlar",
+  "tabs.contacts": "Kişiler",
+  "tabs.tasks": "Görevler",
+  "tabs.adminPanel": "Yönetici Paneli",
+  "statCards.totalMeetings": "Toplam Toplantılar",
+  "statCards.meetingsThisWeek": "Bu Haftaki Toplantılar",
+  "statCards.pendingPayments": "Bekleyen Ödemeler",
+  "statCards.startThisWeek": "Bu Hafta Başlıyor",
+  "statCards.activeEscrows": "Aktif Kişiler",
+  "statCards.inCompensation": "Son Eklenenler",
+  "statCards.testCondition": "Görev Tamamlama",
+  "chatbot.initialMessage": "Merhaba! Pano verileriyle ilgili bugün size nasıl yardımcı olabilirim?",
+  "chatbot.prompt1": "Bugünkü görevlerimi özetle.",
+  "chatbot.prompt2": "Hangi ödemeler beklemede?",
+  "chatbot.prompt3": "Yüksek öncelikli görevleri göster.",
+  "chatbot.prompt4": "Tıbbi kurulda kimler var?",
+  "chatbot.toggle": "Chatbot'u Aç/Kapat",
+  "chatbot.header": "Dripfy AI Asistanı",
+  "chatbot.subtitle": "Çevrimiçi",
+  "chatbot.clear": "Sohbeti Temizle",
+  "chatbot.error": "Üzgünüm, bir hata oluştu.",
+  "chatbot.examplePrompts": "Örnek Sorular",
+  "chatbot.placeholder": "Pano verileri hakkında sorun...",
+  "chatbot.send": "Gönder",
+  "profile.menu.profile": "Profil",
+  "profile.menu.settings": "Ayarlar",
+  "profile.menu.privacy": "Gizlilik",
+  "profile.menu.logout": "Çıkış Yap",
+  "settings.title": "Ayarlar",
+  "settings.closeButton": "Kapat",
+  "settings.saveButton": "Değişiklikleri Kaydet",
+  "settings.tabs.profile": "Profil",
+  "settings.tabs.settings": "Ayarlar",
+  "settings.tabs.privacy": "Gizlilik",
+  "settings.profile.title": "Kişisel Bilgiler",
+  "settings.profile.subtitle": "Fotoğrafınızı ve kişisel bilgilerinizi güncelleyin.",
+  "settings.profile.name": "Tam Adınız",
+  "settings.profile.email": "E-posta Adresi",
+  "settings.profile.password": "Şifre",
+  "settings.profile.newPassword": "Yeni Şifre",
+  "settings.profile.confirmPassword": "Yeni Şifreyi Onayla",
+  "settings.profile.changePassword": "Şifreyi Değiştir",
+  "settings.profile.role": "Rol",
+  "settings.settings.title": "Uygulama Ayarları",
+  "settings.settings.subtitle": "Deneyiminizi özelleştirin.",
+  "settings.settings.language": "Dil",
+  "settings.settings.darkMode": "Karanlık Mod",
+  "settings.settings.emailNotifications": "E-posta Bildirimleri",
+  "settings.settings.pushNotifications": "Anlık Bildirimler",
+  "settings.privacy.title": "Gizlilik Ayarları",
+  "settings.privacy.subtitle": "Verilerinizi ve gizliliğinizi yönetin.",
+  "settings.privacy.auditLog": "Aktivite Kaydı",
+  "settings.privacy.exportData": "Verilerimi Dışa Aktar",
+  "settings.privacy.deleteAccount": "Hesabı Sil",
+  "settings.privacy.exporting": "Dışa aktarılıyor...",
+  "settings.privacy.deleting": "Siliniyor...",
+  "days.monday": "Pazartesi",
+  "days.tuesday": "Salı",
+  "days.wednesday": "Çarşamba",
+  "days.thursday": "Perşembe",
+  "days.friday": "Cuma",
+  "days.saturday": "Cumartesi",
+  "days.sunday": "Pazar",
+  "daysShort.mon": "Pzt",
+  "daysShort.tue": "Sal",
+  "daysShort.wed": "Çar",
+  "daysShort.thu": "Per",
+  "daysShort.fri": "Cum",
+  "daysShort.sat": "Cmt",
+  "daysShort.sun": "Paz",
+  "calendar.today": "Bugün",
+  "calendar.month": "Ay",
+  "calendar.week": "Hafta",
+  "calendar.newEvent": "Yeni Etkinlik",
+  "calendar.addEventTo": "Etkinlik ekle:",
+  "calendar.openPicker": "Tarih seçiciyi aç",
+  "financials.newRecord": "Yeni Kayıt",
+  "financials.description": "Açıklama",
+  "financials.amount": "Miktar",
+  "financials.status": "Durum",
+  "financials.dueDate": "Vade Tarihi",
+  "status.paid": "Ödendi",
+  "status.pending": "Beklemede",
+  "status.overdue": "Gecikmiş",
+  "challenges.title": "Zorluklar",
+  "challenges.add": "Zorluk Ekle",
+  "advantages.title": "Avantajlar",
+  "advantages.add": "Avantaj Ekle",
+  "contacts.newContact": "Yeni Kişi",
+  "tasks.task": "Görev",
+  "tasks.assignee": "Atanan",
+  "tasks.priority": "Öncelik",
+  "tasks.status": "Durum",
+  "tasks.dueDate": "Bitiş Tarihi",
+  "tasks.newTask": "Yeni Görev",
+  "priority.high": "Yüksek",
+  "priority.medium": "Orta",
+  "priority.low": "Düşük",
+  "taskStatus.ToDo": "Yapılacak",
+  "taskStatus.InProgress": "Devam Ediyor",
+  "taskStatus.Done": "Tamamlandı",
+  "admin.userPermissions": "Kullanıcı İzinleri",
+  "admin.auditLog": "Denetim Kaydı",
+  "admin.signupRequests": "Kayıt İstekleri",
+  "admin.by": "tarafından",
+  "admin.approve": "Onayla",
+  "admin.deny": "Reddet",
+  "admin.noRequests": "Bekleyen kayıt isteği yok.",
+  "userRoles.admin": "Yönetici",
+  "userRoles.user": "Kullanıcı",
+  "auditLogActions.Created": "Oluşturuldu",
+  "auditLogActions.Updated": "Güncellendi",
+  "auditLogActions.Deleted": "Silindi",
+  "auditLogActions.Approved": "Onaylandı",
+  "auditLogActions.Denied": "Reddedildi",
+  "dataTypes.schedule": "Etkinlik",
+  "dataTypes.financial": "Finansal Kayıt",
+  "dataTypes.challenge": "Zorluk",
+  "dataTypes.advantage": "Avantaj",
+  "dataTypes.contact": "Kişi",
+  "dataTypes.task": "Görev",
+  "dataTypes.user": "Kullanıcı",
+  "dataTypes.SignupRequest": "Kayıt İsteği",
+  "modal.createNew": "Yeni Oluştur",
+  "modal.edit": "Düzenle",
+  "modal.delete": "Sil",
+  "modal.create": "Oluştur",
+  "modal.save": "Değişiklikleri Kaydet",
+  "modal.noFields": "Bu öğe türü için düzenlenebilir alan yok.",
+  "modal.type": "Tür",
+  "modal.status": "Durum",
+  "modal.dueDate": "Vade Tarihi",
+  "modal.schedule.title": "Başlık",
+  "modal.schedule.day": "Gün",
+  "modal.schedule.time": "Saat",
+  "modal.schedule.participants": "Katılımcılar (virgülle ayırın)",
+  "modal.financials.description": "Açıklama",
+  "modal.financials.amount": "Miktar (€)",
+  "modal.challenges.title": "Başlık",
+  "modal.challenges.description": "Açıklama",
+  "modal.challenges.severity": "Önem Derecesi",
+  "modal.advantages.title": "Başlık",
+  "modal.advantages.description": "Açıklama",
+  "modal.contacts.name": "İsim",
+  "modal.contacts.role": "Rol",
+  "modal.contacts.email": "E-posta",
+  "modal.contacts.phone": "Telefon",
+  "modal.tasks.title": "Başlık",
+  "modal.tasks.assignee": "Atanan",
+  "modal.tasks.priority": "Öncelik",
+  "modal.users.name": "İsim",
+  "modal.users.email": "E-posta",
+  "modal.users.role": "Rol",
+  "footer.links": "Bağlantılar",
+  "footer.imprint": "Künye",
+  "footer.privacy": "Gizlilik Politikası",
+  "footer.terms": "Şartlar ve Koşullar",
+  "footer.followUs": "Bizi Takip Edin",
+  "footer.copyright": "© 2024 Dripfy GmbH. Tüm hakları saklıdır.",
+  "positions": {
+    "CEO": "CEO",
+    "CTO": "CTO",
+    "CFO": "CFO",
+    "COO": "COO",
+    "HeadofDepartment": "Departman Başkanı",
+    "TeamLead": "Takım Lideri",
+    "ProjectManager": "Proje Yöneticisi",
+    "SeniorSpecialist": "Kıdemli Uzman",
+    "JuniorSpecialist": "Uzman",
+    "Intern": "Stajyer"
+  }
+}
