--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,1 +1,187 @@
-full contents of i18n/translations/en.json
+{
+  "login.subtitle": "Management Information System",
+  "login.emailPlaceholder": "Email address",
+  "login.passwordPlaceholder": "Password",
+  "login.signInButton": "Sign in",
+  "login.welcome": "Welcome",
+  "signup.prompt": "Don't have an account? Sign up",
+  "signup.loginPrompt": "Already have an account? Sign in",
+  "signup.namePlaceholder": "Full Name",
+  "signup.emailPlaceholder": "Email address",
+  "signup.phonePlaceholder": "Phone Number",
+  "signup.passwordPlaceholder": "Create a password",
+  "signup.signUpButton": "Request Access",
+  "tabs.calendar": "Calendar",
+  "tabs.financials": "Financials",
+  "tabs.challenges": "Challenges & Advantages",
+  "tabs.contacts": "Contacts",
+  "tabs.tasks": "Tasks",
+  "tabs.adminPanel": "Admin Panel",
+  "statCards.totalMeetings": "Total Meetings",
+  "statCards.meetingsThisWeek": "Meetings This Week",
+  "statCards.pendingPayments": "Pending Payments",
+  "statCards.startThisWeek": "Starting This Week",
+  "statCards.activeEscrows": "Active Contacts",
+  "statCards.inCompensation": "Recently Added",
+  "statCards.testCondition": "Task Completion",
+  "chatbot.initialMessage": "Hello! How can I help you with the dashboard data today?",
+  "chatbot.prompt1": "Summarize my tasks for today.",
+  "chatbot.prompt2": "Which payments are pending?",
+  "chatbot.prompt3": "Show me high-priority tasks.",
+  "chatbot.prompt4": "Who is on the medical board?",
+  "chatbot.toggle": "Toggle Chatbot",
+  "chatbot.header": "Dripfy AI Assistant",
+  "chatbot.subtitle": "Online",
+  "chatbot.clear": "Clear Chat",
+  "chatbot.error": "Sorry, an error occurred.",
+  "chatbot.examplePrompts": "Example Prompts",
+  "chatbot.placeholder": "Ask about dashboard data...",
+  "chatbot.send": "Send",
+  "profile.menu.profile": "Profile",
+  "profile.menu.settings": "Settings",
+  "profile.menu.privacy": "Privacy",
+  "profile.menu.logout": "Logout",
+  "settings.title": "Settings",
+  "settings.closeButton": "Close",
+  "settings.saveButton": "Save Changes",
+  "settings.tabs.profile": "Profile",
+  "settings.tabs.settings": "Settings",
+  "settings.tabs.privacy": "Privacy",
+  "settings.profile.title": "Personal Information",
+  "settings.profile.subtitle": "Update your photo and personal details.",
+  "settings.profile.name": "Full Name",
+  "settings.profile.email": "Email Address",
+  "settings.profile.password": "Password",
+  "settings.profile.newPassword": "New Password",
+  "settings.profile.confirmPassword": "Confirm New Password",
+  "settings.profile.changePassword": "Change Password",
+  "settings.profile.role": "Role",
+  "settings.settings.title": "Application Settings",
+  "settings.settings.subtitle": "Customize your experience.",
+  "settings.settings.language": "Language",
+  "settings.settings.darkMode": "Dark Mode",
+  "settings.settings.emailNotifications": "Email Notifications",
+  "settings.settings.pushNotifications": "Push Notifications",
+  "settings.privacy.title": "Privacy Settings",
+  "settings.privacy.subtitle": "Manage your data and privacy.",
+  "settings.privacy.auditLog": "Activity Log",
+  "settings.privacy.exportData": "Export My Data",
+  "settings.privacy.deleteAccount": "Delete Account",
+  "settings.privacy.exporting": "Exporting...",
+  "settings.privacy.deleting": "Deleting...",
+  "days.monday": "Monday",
+  "days.tuesday": "Tuesday",
+  "days.wednesday": "Wednesday",
+  "days.thursday": "Thursday",
+  "days.friday": "Friday",
+  "days.saturday": "Saturday",
+  "days.sunday": "Sunday",
+  "daysShort.mon": "Mon",
+  "daysShort.tue": "Tue",
+  "daysShort.wed": "Wed",
+  "daysShort.thu": "Thu",
+  "daysShort.fri": "Fri",
+  "daysShort.sat": "Sat",
+  "daysShort.sun": "Sun",
+  "calendar.today": "Today",
+  "calendar.month": "Month",
+  "calendar.week": "Week",
+  "calendar.newEvent": "New Event",
+  "calendar.addEventTo": "Add event to",
+  "calendar.openPicker": "Open date picker",
+  "financials.newRecord": "New Record",
+  "financials.description": "Description",
+  "financials.amount": "Amount",
+  "financials.status": "Status",
+  "financials.dueDate": "Due Date",
+  "status.paid": "Paid",
+  "status.pending": "Pending",
+  "status.overdue": "Overdue",
+  "challenges.title": "Challenges",
+  "challenges.add": "Add Challenge",
+  "advantages.title": "Advantages",
+  "advantages.add": "Add Advantage",
+  "contacts.newContact": "New Contact",
+  "tasks.task": "Task",
+  "tasks.assignee": "Assignee",
+  "tasks.priority": "Priority",
+  "tasks.status": "Status",
+  "tasks.dueDate": "Due Date",
+  "tasks.newTask": "New Task",
+  "priority.high": "High",
+  "priority.medium": "Medium",
+  "priority.low": "Low",
+  "taskStatus.ToDo": "To Do",
+  "taskStatus.InProgress": "In Progress",
+  "taskStatus.Done": "Done",
+  "admin.userPermissions": "User Permissions",
+  "admin.auditLog": "Audit Log",
+  "admin.signupRequests": "Signup Requests",
+  "admin.by": "by",
+  "admin.approve": "Approve",
+  "admin.deny": "Deny",
+  "admin.noRequests": "No pending signup requests.",
+  "userRoles.admin": "Admin",
+  "userRoles.user": "User",
+  "auditLogActions.Created": "Created",
+  "auditLogActions.Updated": "Updated",
+  "auditLogActions.Deleted": "Deleted",
+  "auditLogActions.Approved": "Approved",
+  "auditLogActions.Denied": "Denied",
+  "dataTypes.schedule": "Event",
+  "dataTypes.financial": "Financial Record",
+  "dataTypes.challenge": "Challenge",
+  "dataTypes.advantage": "Advantage",
+  "dataTypes.contact": "Contact",
+  "dataTypes.task": "Task",
+  "dataTypes.user": "User",
+  "dataTypes.SignupRequest": "Signup Request",
+  "modal.createNew": "Create New",
+  "modal.edit": "Edit",
+  "modal.delete": "Delete",
+  "modal.create": "Create",
+  "modal.save": "Save Changes",
+  "modal.noFields": "No editable fields for this item type.",
+  "modal.type": "Type",
+  "modal.status": "Status",
+  "modal.dueDate": "Due Date",
+  "modal.schedule.title": "Title",
+  "modal.schedule.day": "Day",
+  "modal.schedule.time": "Time",
+  "modal.schedule.participants": "Participants (comma-separated)",
+  "modal.financials.description": "Description",
+  "modal.financials.amount": "Amount (€)",
+  "modal.challenges.title": "Title",
+  "modal.challenges.description": "Description",
+  "modal.challenges.severity": "Severity",
+  "modal.advantages.title": "Title",
+  "modal.advantages.description": "Description",
+  "modal.contacts.name": "Name",
+  "modal.contacts.role": "Role",
+  "modal.contacts.email": "Email",
+  "modal.contacts.phone": "Phone",
+  "modal.tasks.title": "Title",
+  "modal.tasks.assignee": "Assignee",
+  "modal.tasks.priority": "Priority",
+  "modal.users.name": "Name",
+  "modal.users.email": "Email",
+  "modal.users.role": "Role",
+  "footer.links": "Links",
+  "footer.imprint": "Imprint",
+  "footer.privacy": "Privacy Policy",
+  "footer.terms": "Terms & Conditions",
+  "footer.followUs": "Follow Us",
+  "footer.copyright": "© 2024 Dripfy GmbH. All rights reserved.",
+  "positions": {
+    "CEO": "CEO",
+    "CTO": "CTO",
+    "CFO": "CFO",
+    "COO": "COO",
+    "HeadofDepartment": "Head of Department",
+    "TeamLead": "Team Lead",
+    "ProjectManager": "Project Manager",
+    "SeniorSpecialist": "Senior Specialist",
+    "JuniorSpecialist": "Junior Specialist",
+    "Intern": "Intern"
+  }
+}
